disable cargo-cache

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -82,5 +82,5 @@ jobs:
 
       - name: Clear the cargo caches
         run: |
-          cargo install cargo-cache --no-default-features --features ci-autoclean
-          cargo-cache
+          cargo install cargo-cache --no-default-features
+          cargo-cache --dry-run
