--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -68,11 +68,16 @@ jobs:
           command: test
           args: --all --all-features --no-fail-fast -- --nocapture
 
-      - name: Generate coverage file
+      - name: Install tarpaulin
         if: matrix.version == '1.42.0' && (github.ref == 'refs/heads/master' || github.event_name == 'pull_request')
         continue-on-error: true
         run: |
           cargo install cargo-tarpaulin
+
+      - name: Generate coverage file
+        if: matrix.version == '1.42.0' && (github.ref == 'refs/heads/master' || github.event_name == 'pull_request')
+        continue-on-error: true
+        run: |
           cargo tarpaulin --out Xml --all --all-features
 
       - name: Upload to Codecov
@@ -85,4 +90,4 @@ jobs:
       - name: Clear the cargo caches
         run: |
           cargo install cargo-cache --no-default-features
-          cargo-cache --dry-run
+          cargo-cache
