--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -89,5 +89,5 @@ jobs:
 
       - name: Clear the cargo caches
         run: |
-          cargo install cargo-cache --no-default-features
+          cargo install cargo-cache --no-default-features --features ci-autoclean
           cargo-cache
