--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -60,7 +60,6 @@ lazy_static = "1.4"
 log = "0.4"
 mime = "0.3"
 mio = "0.6.19"
-net2 = "0.2.33"
 num_cpus = "1.12"
 percent-encoding = "2.1"
 pin-project = "0.4.8"
@@ -71,6 +70,7 @@ slab = "0.4"
 serde = { version = "1.0", features=["derive"] }
 serde_json = "1.0"
 serde_urlencoded = "0.6.1"
+socket2 = "0.3.12"
 url = "2.1"
 time = { version = "0.2.9", default-features = false, features = ["std"] }
 coo-kie = { version = "0.13.3", package = "cookie", optional = true }
