--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -55,7 +55,7 @@ jobs:
           path: ~/.cargo/bin
           key: ${{ matrix.version }}-x86_64-unknown-linux-gnu-tarpaulin
 
-      - name: tests
+      - name: Run tests
         uses: actions-rs/cargo@v1
         timeout-minutes: 40
         with:
@@ -68,7 +68,7 @@ jobs:
         run: |
           cargo install cargo-tarpaulin
 
-      - name: Generate coverage file
+      - name: Generate coverage report
         if: matrix.version == '1.42.0' && (github.ref == 'refs/heads/master' || github.event_name == 'pull_request')
         continue-on-error: true
         run: |
