--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -27,11 +27,34 @@ jobs:
           profile: minimal
           override: true
 
+      - name: Generate Cargo.lock
+        uses: actions-rs/cargo@v1
+        with:
+          command: generate-lockfile
+
       - name: Cache vcpkg
         uses: actions/cache@v1
         with:
           path: C:\vcpkg\installed\x64-windows\
-          key: x86_64-pc-windows-msvc-openssl
+          key: x86_64-pc-windows-msvc-openssl-${{ hashFiles('**/Cargo.lock') }}
+
+      - name: Cache cargo registry
+        uses: actions/cache@v1
+        with:
+          path: ~/.cargo/registry
+          key: ${{ matrix.version }}-x86_64-pc-windows-msvc-cargo-registry-trimmed-${{ hashFiles('**/Cargo.lock') }}
+
+      - name: Cache cargo index
+        uses: actions/cache@v1
+        with:
+          path: ~/.cargo/git
+          key: ${{ matrix.version }}-x86_64-pc-windows-msvc-cargo-index-trimmed-${{ hashFiles('**/Cargo.lock') }}
+
+      - name: Cache cargo build
+        uses: actions/cache@v1
+        with:
+          path: target
+          key: ${{ matrix.version }}-x86_64-unknown-linux-gnu-cargo-build-trimmed-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Install OpenSSL
         run: |
