restore web proc macros

--- a/ntex-macros/Cargo.toml
+++ b/ntex-macros/Cargo.toml
@@ -16,5 +16,5 @@ syn = { version = "^1", features = ["full", "parsing"] }
 proc-macro2 = "^1"
 
 [dev-dependencies]
-ntex = { path = "../ntex/" }
-futures = { version = "0.3.1" }
+ntex = "0.1.6"
+futures = "0.3.4"
