--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,14 @@ members = [
   "ntex-rt",
   "ntex-rt-macros",
   "ntex-service",
+  "ntex-macros",
 ]
 
-#[patch.crates-io]
-#ntex = { path = "ntex" }
-#ntex-codec = { path = "ntex-codec" }
-#ntex-router = { path = "ntex-router" }
-#ntex-rt = { path = "ntex-rt" }
-#ntex-rt-macros = { path = "ntex-rt-macros" }
-#ntex-service = { path = "ntex-service" }
+[patch.crates-io]
+ntex = { path = "ntex" }
+ntex-codec = { path = "ntex-codec" }
+ntex-router = { path = "ntex-router" }
+ntex-rt = { path = "ntex-rt" }
+ntex-rt-macros = { path = "ntex-rt-macros" }
+ntex-service = { path = "ntex-service" }
+ntex-macros = { path = "ntex-macros" }
