--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -41,6 +41,7 @@ ntex-rt = "0.1"
 ntex-rt-macros = "0.1"
 ntex-router = "0.3.2"
 ntex-service = "0.1"
+ntex-macros = "0.1"
 
 actix-threadpool = "0.3.1"
 base64 = "0.12"
