--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,6 @@ ntex = { path = "ntex" }
 ntex-codec = { path = "ntex-codec" }
 ntex-router = { path = "ntex-router" }
 ntex-rt = { path = "ntex-rt" }
-ntex-rt-macros = { path = "ntex-rt-macros" }
 ntex-service = { path = "ntex-service" }
-ntex-macros = { path = "ntex-macros" }
+# ntex-macros = { path = "ntex-macros" }
+# ntex-rt-macros = { path = "ntex-rt-macros" }
