--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex"
-version = "0.1.16"
+version = "0.1.17"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Framework for composable network services"
 readme = "README.md"
@@ -63,6 +63,7 @@ mio = "0.6.19"
 num_cpus = "1.12"
 percent-encoding = "2.1"
 pin-project = "0.4.8"
+pin-project-lite = "0.1.5"
 rand = "0.7"
 regex = "1.3"
 sha-1 = "0.8"
