--- a/ntex-service/Cargo.toml
+++ b/ntex-service/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex-service"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "ntex service"
 keywords = ["network", "framework", "async", "futures"]
@@ -17,7 +17,8 @@ path = "src/lib.rs"
 
 [dependencies]
 futures-util = "0.3.4"
-pin-project = "0.4.8"
+pin-project = "0.4.20"
+pin-project-lite = "0.1.5"
 
 [dev-dependencies]
 ntex-rt = "0.1"
