--- a/ntex-codec/Cargo.toml
+++ b/ntex-codec/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ntex-codec"
 version = "0.1.2"
-authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
+authors = ["ntex contributors <team@ntex.rs>"]
 description = "Utilities for encoding and decoding frames"
 keywords = ["network", "framework", "async", "futures"]
 homepage = "https://ntex.rs"
