--- a/ntex-service/Cargo.toml
+++ b/ntex-service/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ntex-service"
 version = "0.1.3"
-authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
+authors = ["ntex contributors <team@ntex.rs>"]
 description = "ntex service"
 keywords = ["network", "framework", "async", "futures"]
 homepage = "https://ntex.rs"
