--- a/ntex-codec/Cargo.toml
+++ b/ntex-codec/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex-codec"
-version = "0.1.2"
+version = "0.2.0"
 authors = ["ntex contributors <team@ntex.rs>"]
 description = "Utilities for encoding and decoding frames"
 keywords = ["network", "framework", "async", "futures"]
@@ -18,12 +18,12 @@ path = "src/lib.rs"
 [dependencies]
 bitflags = "1.2.1"
 bytes = "0.5.6"
-futures-core = "0.3.4"
-futures-sink = "0.3.4"
-tokio = { version = "0.2.6", default-features=false }
-tokio-util = { version = "0.2.0", default-features=false, features=["codec"] }
+either = "1.5.3"
+futures-core = "0.3.5"
+futures-sink = "0.3.5"
 log = "0.4"
+tokio = { version = "0.2.6", default-features=false }
 
 [dev-dependencies]
-ntex = "0.1.4"
-futures = "0.3.4"
+ntex = "0.1.20"
+futures = "0.3.5"
