--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex"
-version = "0.1.24-dev"
+version = "0.1.24"
 authors = ["ntex contributors <team@ntex.rs>"]
 description = "Framework for composable network services"
 readme = "README.md"
@@ -39,11 +39,11 @@ cookie = ["coo-kie", "coo-kie/percent-encode"]
 ntex-codec = "0.1.2"
 ntex-rt = "0.1.1"
 ntex-rt-macros = "0.1"
-ntex-router = "0.3.5"
+ntex-router = "0.3.7"
 ntex-service = "0.1.3"
 ntex-macros = "0.1"
 
-actix-threadpool = "0.3.1"
+actix-threadpool = "0.3.3"
 base64 = "0.12"
 bitflags = "1.2.1"
 bytes = "0.5.6"
@@ -70,7 +70,7 @@ sha-1 = "0.9.1"
 slab = "0.4.2"
 serde = { version = "1.0", features=["derive"] }
 serde_json = "1.0"
-serde_urlencoded = "0.6.1"
+serde_urlencoded = "0.7.0"
 socket2 = "0.3.12"
 url = "2.1"
 time = { version = "0.2.11", default-features = false, features = ["std"] }
