--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -40,7 +40,7 @@ ntex-codec = "0.1.2"
 ntex-rt = "0.1.1"
 ntex-rt-macros = "0.1"
 ntex-router = "0.3.7"
-ntex-service = "0.1.3"
+ntex-service = "0.1.5"
 ntex-macros = "0.1"
 
 actix-threadpool = "0.3.3"
@@ -50,19 +50,19 @@ bytes = "0.5.6"
 bytestring = "0.1.5"
 derive_more = "0.99.5"
 either = "1.5.3"
-encoding_rs = "0.8.22"
-futures = "0.3.5"
-fxhash = "0.2.1"
+encoding_rs = "0.8.26"
+futures = "0.3.9"
+ahash = "0.6.2"
 h2 = "0.2.4"
 http = "0.2.1"
 httparse = "1.3"
 log = "0.4"
 mime = "0.3"
 mio = "0.6.22"
-num_cpus = "1.12"
+num_cpus = "1.13"
 percent-encoding = "2.1"
 pin-project = "1.0.1"
-pin-project-lite = "0.2.0"
+pin-project-lite = "0.2.4"
 rand = "0.8"
 regex = "1.3"
 sha-1 = "0.9.1"
@@ -99,7 +99,7 @@ brotli2 = { version="0.3.2", optional = true }
 flate2 = { version = "1.0.14", optional = true }
 
 [dev-dependencies]
-futures = "0.3.4"
+futures = "0.3.9"
 env_logger = "0.8"
 serde_derive = "1.0"
 open-ssl = { version="0.10", package = "openssl" }
