--- a/ntex-codec/Cargo.toml
+++ b/ntex-codec/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex-codec"
-version = "0.2.1"
+version = "0.2.2"
 authors = ["ntex contributors <team@ntex.rs>"]
 description = "Utilities for encoding and decoding frames"
 keywords = ["network", "framework", "async", "futures"]
@@ -19,11 +19,11 @@ path = "src/lib.rs"
 bitflags = "1.2.1"
 bytes = "0.5.6"
 either = "1.5.3"
-futures-core = "0.3.5"
-futures-sink = "0.3.5"
+futures-core = "0.3.12"
+futures-sink = "0.3.12"
 log = "0.4"
 tokio = { version = "0.2.6", default-features=false }
 
 [dev-dependencies]
-ntex = "0.1.21"
-futures = "0.3.5"
+ntex = "0.2.0-b.2"
+futures = "0.3.12"
