--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex"
-version = "0.2.0-b.3"
+version = "0.2.0-b.4"
 authors = ["ntex contributors <team@ntex.rs>"]
 description = "Framework for composable network services"
 readme = "README.md"
@@ -36,7 +36,7 @@ compress = ["flate2", "brotli2"]
 cookie = ["coo-kie", "coo-kie/percent-encode"]
 
 [dependencies]
-ntex-codec = "0.2.2"
+ntex-codec = "0.3.0-b.1"
 ntex-rt = "0.1.1"
 ntex-rt-macros = "0.1"
 ntex-router = "0.3.8"
@@ -49,7 +49,7 @@ bitflags = "1.2.1"
 bytes = "0.5.6"
 bytestring = "0.1.5"
 derive_more = "0.99.11"
-either = "1.5.3"
+either = "1.6.1"
 encoding_rs = "0.8.26"
 futures = "0.3.12"
 ahash = "0.6.3"
@@ -104,3 +104,6 @@ serde_derive = "1.0"
 open-ssl = { version="0.10", package = "openssl" }
 rust-tls = { version = "0.19.0", package="rustls", features = ["dangerous_configuration"]  }
 webpki = "0.21.2"
+
+[patch.crates-io]
+ntex = { path = "../ntex-codec" }
