--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -74,3 +74,4 @@ jobs:
                 --skip test_params
                 --skip test_body
                 --skip test_form
+                --skip test_json
