--- a/ntex-codec/Cargo.toml
+++ b/ntex-codec/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex-codec"
-version = "0.3.0-b.1"
+version = "0.3.0"
 authors = ["ntex contributors <team@ntex.rs>"]
 description = "Utilities for encoding and decoding frames"
 keywords = ["network", "framework", "async", "futures"]
@@ -25,5 +25,5 @@ log = "0.4"
 tokio = { version = "0.2.6", default-features=false }
 
 [dev-dependencies]
-ntex = "0.2.0-b.3"
+ntex = "0.2.0-b.13"
 futures = "0.3.12"
