--- a/ntex-rt-macros/Cargo.toml
+++ b/ntex-rt-macros/Cargo.toml
@@ -17,4 +17,4 @@ quote = "^1"
 syn = { version = "^1", features = ["full"] }
 
 [dev-dependencies]
-ntex = { version = "0.1.0" }
+ntex = { version = "0.3.0-b.1" }
