--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex"
-version = "0.2.1"
+version = "0.3.0"
 authors = ["ntex contributors <team@ntex.rs>"]
 description = "Framework for composable network services"
 readme = "README.md"
@@ -36,28 +36,28 @@ compress = ["flate2", "brotli2"]
 cookie = ["coo-kie", "coo-kie/percent-encode"]
 
 [dependencies]
-ntex-codec = "0.3.0"
-ntex-rt = "0.1.2"
+ntex-codec = "0.4.0"
+ntex-rt = "0.2.0"
 ntex-rt-macros = "0.1"
-ntex-router = "0.3.8"
+ntex-router = "0.4.0"
 ntex-service = "0.1.5"
 ntex-macros = "0.1"
 
 base64 = "0.13"
 bitflags = "1.2.1"
-bytes = "0.5.6"
-bytestring = "0.1.5"
+bytes = "1.0"
+bytestring = "1.0"
 derive_more = "0.99.11"
 either = "1.6.1"
 encoding_rs = "0.8.26"
-futures = "0.3.12"
+futures = "0.3.13"
 ahash = "0.7.0"
-h2 = "0.2.4"
+h2 = "0.3"
 http = "0.2.1"
 httparse = "1.3"
 log = "0.4"
 mime = "0.3"
-mio = "0.6.22"
+mio = "0.7.9"
 num_cpus = "1.13"
 percent-encoding = "2.1"
 pin-project-lite = "0.2.4"
@@ -70,35 +70,31 @@ serde_json = "1.0"
 serde_urlencoded = "0.7.0"
 socket2 = "0.3.12"
 url = "2.1"
-time = { version = "0.2.15", default-features = false, features = ["std"] }
 coo-kie = { version = "0.14.2", package = "cookie", optional = true }
-tokio = "0.2.6"
+time = { version = "0.2.15", default-features = false, features = ["std"] }
+tokio = { version = "1", default-features=false }
 
 # resolver
-trust-dns-proto = { version = "0.19.6", default-features = false }
-trust-dns-resolver = { version = "0.19.6", default-features = false, features=["system-config"] }
-async-trait = "0.1.27" # this is only for trust-dns
-
-# FIXME: Remove it and use mio own uds feature once mio 0.7 is released
-mio-uds = { version = "0.6.7" }
+trust-dns-proto = { version = "0.20.0", default-features = false }
+trust-dns-resolver = { version = "0.20.0", default-features = false, features=["system-config", "tokio-runtime"] }
 
 # openssl
 open-ssl = { version="0.10", package = "openssl", optional = true }
-tokio-openssl = { version = "0.4.0", optional = true }
+tokio-openssl = { version = "0.6.1", optional = true }
 
 # rustls
 rust-tls = { version = "0.19.0", package = "rustls", optional = true }
-webpki = { version = "0.21.2", optional = true }
+webpki = { version = "0.21.4", optional = true }
 webpki-roots = { version = "0.21.0", optional = true }
-tokio-rustls = { version = "0.15.0", optional = true }
+tokio-rustls = { version = "0.22.0", optional = true }
 
 # compression
 brotli2 = { version="0.3.2", optional = true }
-flate2 = { version = "1.0.14", optional = true }
+flate2 = { version = "1.0.20", optional = true }
 
 [dev-dependencies]
 env_logger = "0.8"
 serde_derive = "1.0"
 open-ssl = { version="0.10", package = "openssl" }
 rust-tls = { version = "0.19.0", package="rustls", features = ["dangerous_configuration"]  }
-webpki = "0.21.2"
+webpki = "0.21.4"
