--- a/ntex-codec/Cargo.toml
+++ b/ntex-codec/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex-codec"
-version = "0.4.0"
+version = "0.4.1"
 authors = ["ntex contributors <team@ntex.rs>"]
 description = "Utilities for encoding and decoding frames"
 keywords = ["network", "framework", "async", "futures"]
@@ -18,12 +18,12 @@ path = "src/lib.rs"
 [dependencies]
 bitflags = "1.2.1"
 bytes = "1.0"
-either = "1.6.1"
-futures-core = "0.3.12"
-futures-sink = "0.3.12"
+ntex-service = "0.1.7"
+futures-core = { version = "0.3.13", default-features = false, features = ["alloc"] }
+futures-sink = { version = "0.3.13", default-features = false, features = ["alloc"] }
 log = "0.4"
 tokio = { version = "1", default-features=false }
 
 [dev-dependencies]
-ntex = "0.3.0-b.1"
+ntex = "0.3.13"
 futures = "0.3.13"
