--- a/ntex-rt/Cargo.toml
+++ b/ntex-rt/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex-rt"
-version = "0.2.1"
+version = "0.2.2"
 authors = ["ntex contributors <team@ntex.rs>"]
 description = "ntex runtime"
 keywords = ["network", "framework", "async", "futures"]
@@ -16,5 +16,5 @@ name = "ntex_rt"
 path = "src/lib.rs"
 
 [dependencies]
-futures = "0.3.13"
-tokio = { version = "1", default-features=false, features = ["rt", "net", "time", "signal"] }
+ntex-service = "0.1.7"
+tokio = { version = "1", default-features=false, features = ["rt", "net", "time", "signal", "sync"] }
