--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex"
-version = "0.3.13"
+version = "0.3.14"
 authors = ["ntex contributors <team@ntex.rs>"]
 description = "Framework for composable network services"
 readme = "README.md"
@@ -36,10 +36,10 @@ compress = ["flate2", "brotli2"]
 cookie = ["coo-kie", "coo-kie/percent-encode"]
 
 [dependencies]
-ntex-codec = "0.4.0"
-ntex-rt = "0.2.1"
+ntex-codec = "0.4.1"
+ntex-rt = "0.2.2"
 ntex-router = "0.4.2"
-ntex-service = "0.1.6"
+ntex-service = "0.1.7"
 ntex-macros = "0.1.3"
 
 base64 = "0.13"
@@ -47,20 +47,21 @@ bitflags = "1.2"
 bytes = "1.0"
 bytestring = { version = "1.0", features = ["serde"] }
 derive_more = "0.99.13"
-either = "1.6.1"
 encoding_rs = "0.8"
-futures = "0.3.13"
+futures-core = { version = "0.3.13", default-features = false, features = ["alloc"] }
+futures-sink = { version = "0.3.13", default-features = false, features = ["alloc"] }
 ahash = "0.7.2"
 h2 = "0.3"
 http = "0.2"
 httparse = "1.3"
+httpdate = "1.0"
 log = "0.4"
 mime = "0.3"
 mio = "0.7.10"
 num_cpus = "1.13"
+nanorand = "0.5"
 percent-encoding = "2.1"
 pin-project-lite = "0.2"
-rand = "0.8"
 regex = "1.4"
 sha-1 = "0.9"
 slab = "0.4"
@@ -70,8 +71,7 @@ serde_urlencoded = "0.7"
 socket2 = "0.4"
 url = "2.1"
 coo-kie = { version = "0.15", package = "cookie", optional = true }
-time = { version = "0.2", default-features = false, features = ["std"] }
-tokio = { version = "1", default-features=false }
+tokio = { version = "1", default-features=false, features = ["sync"] }
 
 # resolver
 trust-dns-proto = { version = "0.20", default-features = false }
@@ -93,7 +93,9 @@ flate2 = { version = "1.0.20", optional = true }
 
 [dev-dependencies]
 env_logger = "0.8"
-serde_derive = "1.0"
+rand = "0.8"
+time = "0.2"
 open-ssl = { version="0.10", package = "openssl" }
 rust-tls = { version = "0.19", package="rustls", features = ["dangerous_configuration"]  }
 webpki = "0.21"
+futures = "0.3.13"
