--- a/ntex-rt/Cargo.toml
+++ b/ntex-rt/Cargo.toml
@@ -16,5 +16,5 @@ name = "ntex_rt"
 path = "src/lib.rs"
 
 [dependencies]
-ntex-service = "0.1.7"
+ntex-util = "0.1.0"
 tokio = { version = "1", default-features = false, features = ["rt", "net", "time", "signal", "sync"] }
