--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -44,6 +44,7 @@ ntex-rt = "0.2.2"
 ntex-router = "0.4.2"
 ntex-service = "0.1.7"
 ntex-macros = "0.1.3"
+ntex-util = "0.1.0"
 
 base64 = "0.13"
 bitflags = "1.2"
