--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -21,7 +21,7 @@ name = "ntex"
 path = "src/lib.rs"
 
 [features]
-default = []
+default = ["http-framework"]
 
 # openssl
 openssl = ["open-ssl", "tokio-openssl"]
@@ -38,6 +38,10 @@ cookie = ["coo-kie", "coo-kie/percent-encode"]
 # url support
 url = ["url-pkg"]
 
+# enable http/web support
+http-framework = ["h2", "http", "httparse",
+    "httpdate", "mime", "percent-encoding", "serde_json", "serde_urlencoded"]
+
 [dependencies]
 ntex-codec = "0.4.1"
 ntex-rt = "0.2.2"
@@ -51,31 +55,33 @@ bitflags = "1.2"
 bytes = "1.0"
 bytestring = { version = "1.0", features = ["serde"] }
 derive_more = "0.99.13"
-encoding_rs = "0.8"
 futures-core = { version = "0.3.13", default-features = false, features = ["alloc"] }
 futures-sink = { version = "0.3.13", default-features = false, features = ["alloc"] }
 ahash = "0.7.2"
-h2 = "0.3"
-http = "0.2"
-httparse = "1.3"
-httpdate = "1.0"
 log = "0.4"
-mime = "0.3"
 mio = "0.7.10"
 num_cpus = "1.13"
 nanorand = { version = "0.5", default-features = false, features = ["std", "wyrand"] }
-percent-encoding = "2.1"
 pin-project-lite = "0.2"
 regex = { version = "1.4.5", default-features = false, features = ["std"] }
 sha-1 = "0.9"
 slab = "0.4"
 serde = { version = "1.0", features=["derive"] }
-serde_json = "1.0"
-serde_urlencoded = "0.7"
 socket2 = "0.4"
+tokio = { version = "1", default-features = false, features = ["sync"] }
+
+# http/web framework
+h2 = { version = "0.3", optional = true }
+http = { version = "0.2", optional = true }
+httparse = { version = "1.3", optional = true }
+httpdate = { version = "1.0", optional = true }
+encoding_rs = { version = "0.8", optional = true }
+mime = { version = "0.3", optional = true }
+percent-encoding = { version = "2.1", optional = true }
+serde_json = { version = "1.0", optional = true }
+serde_urlencoded = { version = "0.7", optional = true }
 url-pkg = { version = "2.1", package = "url", optional = true }
 coo-kie = { version = "0.15", package = "cookie", optional = true }
-tokio = { version = "1", default-features = false, features = ["sync"] }
 
 # openssl
 open-ssl = { version="0.10", package = "openssl", optional = true }
