--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -40,7 +40,7 @@ url = ["url-pkg"]
 
 # enable http/web support
 http-framework = ["h2", "http", "httparse",
-    "httpdate", "mime", "percent-encoding", "serde_json", "serde_urlencoded"]
+    "httpdate", "encoding_rs", "mime", "percent-encoding", "serde_json", "serde_urlencoded"]
 
 [dependencies]
 ntex-codec = "0.4.1"
