--- a/ntex-router/Cargo.toml
+++ b/ntex-router/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex-router"
-version = "0.4.4"
+version = "0.5.0"
 authors = ["ntex contributors <team@ntex.rs>"]
 description = "Path router"
 keywords = ["ntex"]
@@ -18,7 +18,7 @@ default = ["http"]
 
 [dependencies]
 serde = "1.0"
-bytestring = "1.0"
+ntex-bytes = "0.1"
 log = "0.4"
 http = { version = "0.2", optional = true }
 regex = { version = "1.5.4", default-features = false, features = ["std"] }
