--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -43,18 +43,17 @@ http-framework = ["h2", "http", "httparse",
     "httpdate", "encoding_rs", "mime", "percent-encoding", "serde_json", "serde_urlencoded"]
 
 [dependencies]
-ntex-codec = "0.4.1"
+ntex-codec = "0.5.0"
 ntex-rt = "0.2.2"
-ntex-router = "0.4.4"
+ntex-router = "0.5.0"
 ntex-service = "0.1.9"
 ntex-macros = "0.1.3"
 ntex-util = "0.1.1"
+ntex-bytes = "0.1.0"
 
 ahash = "0.7.4"
 base64 = "0.13"
 bitflags = "1.2"
-bytes = "1.0"
-bytestring = { version = "1.0", features = ["serde"] }
 derive_more = "0.99.14"
 futures-core = { version = "0.3.15", default-features = false, features = ["alloc"] }
 futures-sink = { version = "0.3.15", default-features = false, features = ["alloc"] }
