--- a/ntex-bytes/Cargo.toml
+++ b/ntex-bytes/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex-bytes"
-version = "0.1.1"
+version = "0.1.2"
 license = "MIT"
 authors = ["Carl Lerche <me@carllerche.com>"]
 description = "Types and traits for working with bytes (bytes crate fork)"
@@ -14,6 +14,8 @@ edition = "2018"
 [dependencies]
 serde = "1.0"
 bytes = "1.0.1"
+
+backtrace = "*"
 
 [dev-dependencies]
 serde_test = "1.0"
