--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -46,7 +46,7 @@ http-framework = ["h2", "http", "httparse",
 ntex-codec = "0.5.0"
 ntex-rt = "0.2.2"
 ntex-router = "0.5.1"
-ntex-service = "0.1.9"
+ntex-service = "0.2.0-b.0"
 ntex-macros = "0.1.3"
 ntex-util = "0.1.1"
 ntex-bytes = "0.1.4"
