--- a/ntex-rt/Cargo.toml
+++ b/ntex-rt/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex-rt"
-version = "0.2.2"
+version = "0.3.0"
 authors = ["ntex contributors <team@ntex.rs>"]
 description = "ntex runtime"
 keywords = ["network", "framework", "async", "futures"]
@@ -17,4 +17,5 @@ path = "src/lib.rs"
 
 [dependencies]
 ntex-util = "0.1.0"
+pin-project-lite = "0.2"
 tokio = { version = "1", default-features = false, features = ["rt", "net", "time", "signal", "sync"] }
