--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -44,7 +44,7 @@ http-framework = ["h2", "http", "httparse",
 
 [dependencies]
 ntex-codec = "0.5.0"
-ntex-rt = "0.2.2"
+ntex-rt = "0.3.0"
 ntex-router = "0.5.1"
 ntex-service = "0.2.0-b.0"
 ntex-macros = "0.1.3"
@@ -54,6 +54,7 @@ ntex-bytes = "0.1.4"
 ahash = "0.7.4"
 base64 = "0.13"
 bitflags = "1.3"
+bitmaps = "3.1"
 derive_more = "0.99.14"
 futures-core = { version = "0.3.16", default-features = false, features = ["alloc"] }
 futures-sink = { version = "0.3.16", default-features = false, features = ["alloc"] }
