--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex"
-version = "0.4.0-b.13"
+version = "0.4.0"
 authors = ["ntex contributors <team@ntex.rs>"]
 description = "Framework for composable network services"
 readme = "README.md"
@@ -46,7 +46,7 @@ http-framework = ["h2", "http", "httparse",
 ntex-codec = "0.5.1"
 ntex-rt = "0.3.1"
 ntex-router = "0.5.1"
-ntex-service = "0.2.0-b.0"
+ntex-service = "0.2.0"
 ntex-macros = "0.1.3"
 ntex-util = "0.1.1"
 ntex-bytes = "0.1.4"
