--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -51,10 +51,10 @@ ntex-macros = "0.1.3"
 ntex-util = "0.1.1"
 ntex-bytes = "0.1.4"
 
-ahash = "0.7.4"
 base64 = "0.13"
 bitflags = "1.3"
 derive_more = "0.99.14"
+fxhash = "0.2.1"
 futures-core = { version = "0.3.16", default-features = false, features = ["alloc"] }
 futures-sink = { version = "0.3.16", default-features = false, features = ["alloc"] }
 log = "0.4"
