--- a/ntex-bytes/Cargo.toml
+++ b/ntex-bytes/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "ntex-bytes"
-version = "0.1.4"
+version = "0.1.5"
 license = "MIT"
-authors = ["Carl Lerche <me@carllerche.com>"]
+authors = ["Nikolay Kim <fafhrd91@gmail.com>", "Carl Lerche <me@carllerche.com>"]
 description = "Types and traits for working with bytes (bytes crate fork)"
 documentation = "https://docs.rs/ntex-bytes"
 repository = "https://github.com/ntex-rs/ntex-bytes"
@@ -12,9 +12,12 @@ categories = ["network-programming", "data-structures"]
 edition = "2018"
 
 [dependencies]
-serde = "1.0"
-bytes = "1.0.1"
+bitflags = "1.3"
+bytes = "1.0.0"
+serde = "1.0.0"
+futures-core = { version = "0.3.18", default-features = false, features = ["alloc"] }
 
 [dev-dependencies]
 serde_test = "1.0"
 serde_json = "1.0"
+ntex = "0.4.10"
