--- a/ntex-util/Cargo.toml
+++ b/ntex-util/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex-util"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["ntex contributors <team@ntex.rs>"]
 description = "Utilities for ntex framework"
 keywords = ["network", "framework", "async", "futures"]
@@ -17,10 +17,17 @@ path = "src/lib.rs"
 
 [dependencies]
 bitflags = "1.2"
+log = "0.4"
 slab = "0.4"
+futures-timer = "3.0.2"
 futures-core = { version = "0.3.18", default-features = false, features = ["alloc"] }
 futures-sink = { version = "0.3.18", default-features = false, features = ["alloc"] }
 pin-project-lite = "0.2.6"
 
+backtrace = "*"
+
 [dev-dependencies]
-ntex = "0.3.14"
+ntex = "0.4.10"
+ntex-rt = "0.3.2"
+ntex-macros = "0.1.3"
+futures-util = { version = "0.3.18", default-features = false, features = ["alloc"] }
