--- a/ntex-io/Cargo.toml
+++ b/ntex-io/Cargo.toml
@@ -1,27 +1,39 @@
 [package]
-name = "ntex-codec"
-version = "0.5.1"
+name = "ntex-io"
+version = "0.1.0"
 authors = ["ntex contributors <team@ntex.rs>"]
 description = "Utilities for encoding and decoding frames"
 keywords = ["network", "framework", "async", "futures"]
 homepage = "https://ntex.rs"
 repository = "https://github.com/ntex-rs/ntex.git"
-documentation = "https://docs.rs/ntex-codec/"
+documentation = "https://docs.rs/ntex-io/"
 categories = ["network-programming", "asynchronous"]
 license = "MIT"
 edition = "2018"
 
 [lib]
-name = "ntex_codec"
+name = "ntex_io"
 path = "src/lib.rs"
+
+[features]
+default = ["tokio"]
+
+# tokio support
+tokio = ["tok-io"]
 
 [dependencies]
 bitflags = "1.3"
-ntex-bytes = "0.1"
-ntex-util = "0.1"
+fxhash = "0.2.1"
+ntex-codec = "0.5.1"
+ntex-bytes = "0.1.7"
+ntex-util = "0.1.2"
+ntex-service = "0.2.1"
 log = "0.4"
-tokio = { version = "1", default-features = false }
+pin-project-lite = "0.2"
+
+tok-io = { version = "1", package = "tokio", default-features = false, features = ["net"], optional = true }
 
 [dev-dependencies]
 ntex = "0.4.13"
 futures = "0.3.13"
+rand = "0.8"
