--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -50,6 +50,7 @@ ntex-service = "0.2.1"
 ntex-macros = "0.1.3"
 ntex-util = "0.1.2"
 ntex-bytes = "0.1.7"
+ntex-io = { version = "0.1", features = ["tokio"] }
 
 base64 = "0.13"
 bitflags = "1.3"
