--- a/ntex-io/Cargo.toml
+++ b/ntex-io/Cargo.toml
@@ -37,3 +37,4 @@ tok-io = { version = "1", package = "tokio", default-features = false, features 
 ntex = "0.4.13"
 futures = "0.3.13"
 rand = "0.8"
+env_logger = "0.9"
