--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -24,7 +24,7 @@ path = "src/lib.rs"
 default = ["http-framework"]
 
 # openssl
-openssl = ["open-ssl", "tokio-openssl"]
+openssl = ["open-ssl", "tokio-openssl", "ntex-openssl"]
 
 # rustls support
 rustls = ["rust-tls", "rustls-pemfile", "tokio-rustls", "webpki", "webpki-roots"]
@@ -51,6 +51,7 @@ ntex-macros = "0.1.3"
 ntex-util = "0.1.2"
 ntex-bytes = "0.1.7"
 ntex-io = { version = "0.1", features = ["tokio"] }
+ntex-openssl = { version = "0.1", optional = true }
 
 base64 = "0.13"
 bitflags = "1.3"
