--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,10 @@ members = [
   "ntex-bytes",
   "ntex-codec",
   "ntex-io",
-  "ntex-openssl",
   "ntex-router",
   "ntex-rt",
   "ntex-service",
+  "ntex-tls",
   "ntex-macros",
   "ntex-util",
 ]
@@ -17,9 +17,9 @@ ntex = { path = "ntex" }
 ntex-bytes = { path = "ntex-bytes" }
 ntex-codec = { path = "ntex-codec" }
 ntex-io = { path = "ntex-io" }
-ntex-openssl = { path = "ntex-openssl" }
 ntex-router = { path = "ntex-router" }
 ntex-rt = { path = "ntex-rt" }
 ntex-service = { path = "ntex-service" }
+ntex-tls = { path = "ntex-tls" }
 ntex-macros = { path = "ntex-macros" }
 ntex-util = { path = "ntex-util" }
