--- a/ntex-io/Cargo.toml
+++ b/ntex-io/Cargo.toml
@@ -33,8 +33,10 @@ pin-project-lite = "0.2"
 
 tok-io = { version = "1", package = "tokio", default-features = false, features = ["net"], optional = true }
 
+backtrace = "*"
+
 [dev-dependencies]
-ntex = "0.4.13"
-futures = "0.3.13"
+ntex = "0.5.0-b.0"
+futures = "0.3"
 rand = "0.8"
 env_logger = "0.9"
