--- a/ntex-macros/Cargo.toml
+++ b/ntex-macros/Cargo.toml
@@ -16,5 +16,5 @@ syn = { version = "^1", features = ["full", "parsing"] }
 proc-macro2 = "^1"
 
 [dev-dependencies]
-ntex = "0.4.10"
+ntex = "0.5.0-b.0"
 futures = "0.3.13"
