--- a/ntex-tls/Cargo.toml
+++ b/ntex-tls/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ntex-openssl"
+name = "ntex-tls"
 version = "0.1.0"
 authors = ["ntex contributors <team@ntex.rs>"]
 description = "An implementation of SSL streams for ntex backed by OpenSSL"
@@ -12,16 +12,30 @@ license = "MIT"
 edition = "2018"
 
 [lib]
-name = "ntex_openssl"
+name = "ntex_tls"
 path = "src/lib.rs"
+
+[features]
+default = []
+
+# openssl
+openssl = ["tls_openssl"]
+
+# rustls support
+rustls = ["tls_rust"]
 
 [dependencies]
 ntex-bytes = "0.1.7"
 ntex-io = "0.1.0"
 ntex-util = "0.1.2"
-openssl = "0.10.32"
+
+# openssl
+tls_openssl = { version="0.10", package = "openssl", optional = true }
+
+# rustls
+tls_rust = { version = "0.20", package = "rustls", optional = true }
 
 [dev-dependencies]
-ntex = { version = "0.5.0", features = ["openssl"] }
-futures = "0.3"
+ntex = { version = "0.5.0-b.0", features = ["openssl", "rustls"] }
+log = "0.4"
 env_logger = "0.9"
