--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex"
-version = "0.5.0"
+version = "0.5.0-b.0"
 authors = ["ntex contributors <team@ntex.rs>"]
 description = "Framework for composable network services"
 readme = "README.md"
@@ -24,10 +24,10 @@ path = "src/lib.rs"
 default = ["http-framework"]
 
 # openssl
-openssl = ["open-ssl", "tokio-openssl", "ntex-openssl"]
+openssl = ["open-ssl", "ntex-tls/openssl"]
 
 # rustls support
-rustls = ["rust-tls", "rustls-pemfile", "tokio-rustls", "webpki", "webpki-roots"]
+rustls = ["rust-tls", "rustls-pemfile", "webpki", "webpki-roots", "ntex-tls/rustls"]
 
 # enable compressison support
 compress = ["flate2", "brotli2"]
@@ -51,14 +51,14 @@ ntex-macros = "0.1.3"
 ntex-util = "0.1.2"
 ntex-bytes = "0.1.7"
 ntex-io = { version = "0.1", features = ["tokio"] }
-ntex-openssl = { version = "0.1", optional = true }
+ntex-tls = "0.1"
 
 base64 = "0.13"
 bitflags = "1.3"
 derive_more = "0.99.14"
 fxhash = "0.2.1"
-futures-core = { version = "0.3.18", default-features = false, features = ["alloc"] }
-futures-sink = { version = "0.3.18", default-features = false, features = ["alloc"] }
+futures-core = { version = "0.3.17", default-features = false, features = ["alloc"] }
+futures-sink = { version = "0.3.17", default-features = false, features = ["alloc"] }
 log = "0.4"
 mio = "0.7.11"
 num_cpus = "1.13"
@@ -74,7 +74,7 @@ async-oneshot = "0.5.0"
 async-channel = "1.6.1"
 
 # http/web framework
-h2 = { version = "0.3", optional = true }
+h2 = { version = "0.3.9", optional = true }
 http = { version = "0.2", optional = true }
 httparse = { version = "1.5.1", optional = true }
 httpdate = { version = "1.0", optional = true }
@@ -88,12 +88,10 @@ coo-kie = { version = "0.15", package = "cookie", optional = true }
 
 # openssl
 open-ssl = { version="0.10", package = "openssl", optional = true }
-tokio-openssl = { version = "0.6", optional = true }
 
 # rustls
 rust-tls = { version = "0.20", package = "rustls", optional = true }
 rustls-pemfile = { version = "0.2", optional = true }
-tokio-rustls = { version = "0.23", optional = true }
 webpki = { version = "0.22", optional = true }
 webpki-roots = { version = "0.22", optional = true }
 
