--- a/ntex-tls/Cargo.toml
+++ b/ntex-tls/Cargo.toml
@@ -22,18 +22,21 @@ default = []
 openssl = ["tls_openssl"]
 
 # rustls support
-rustls = ["tls_rust"]
+rustls = ["tls_rust", "webpki-roots"]
 
 [dependencies]
 ntex-bytes = "0.1.7"
 ntex-io = "0.1.0"
 ntex-util = "0.1.2"
+ntex-service = "0.2.1"
+pin-project-lite = "0.2"
 
 # openssl
 tls_openssl = { version="0.10", package = "openssl", optional = true }
 
 # rustls
 tls_rust = { version = "0.20", package = "rustls", optional = true }
+webpki-roots = { version = "0.22", optional = true }
 
 [dev-dependencies]
 ntex = { version = "0.5.0-b.0", features = ["openssl", "rustls"] }
