--- a/ntex-bytes/Cargo.toml
+++ b/ntex-bytes/Cargo.toml
@@ -15,9 +15,9 @@ edition = "2018"
 bitflags = "1.3"
 bytes = "1.0.0"
 serde = "1.0.0"
-futures-core = { version = "0.3.17", default-features = false, features = ["alloc"] }
+futures-core = { version = "0.3", default-features = false, features = ["alloc"] }
 
 [dev-dependencies]
 serde_test = "1.0"
 serde_json = "1.0"
-ntex = "0.4.10"
+ntex = "0.5.0-b.0"
