--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -57,12 +57,12 @@ base64 = "0.13"
 bitflags = "1.3"
 derive_more = "0.99.14"
 fxhash = "0.2.1"
-futures-core = { version = "0.3.17", default-features = false, features = ["alloc"] }
-futures-sink = { version = "0.3.17", default-features = false, features = ["alloc"] }
+futures-core = { version = "0.3", default-features = false, features = ["alloc"] }
+futures-sink = { version = "0.3", default-features = false, features = ["alloc"] }
 log = "0.4"
-mio = "0.7.11"
 num_cpus = "1.13"
 nanorand = { version = "0.6.1", default-features = false, features = ["std", "wyrand"] }
+polling = "2.2.0"
 pin-project-lite = "0.2"
 regex = { version = "1.5.4", default-features = false, features = ["std"] }
 sha-1 = "0.9"
