--- a/ntex-rt/Cargo.toml
+++ b/ntex-rt/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex-rt"
-version = "0.3.2"
+version = "0.4.0-b.0"
 authors = ["ntex contributors <team@ntex.rs>"]
 description = "ntex runtime"
 keywords = ["network", "framework", "async", "futures"]
@@ -15,7 +15,17 @@ edition = "2018"
 name = "ntex_rt"
 path = "src/lib.rs"
 
+[features]
+default = ["tokio"]
+
+# tokio support
+tokio = ["tok-io", "ntex-io/tokio"]
+
 [dependencies]
+ntex-bytes = "0.1.7"
+ntex-io = "0.1.0"
 ntex-util = "0.1.2"
+log = "0.4"
 pin-project-lite = "0.2"
-tokio = { version = "1", default-features = false, features = ["rt", "net", "time", "signal", "sync"] }
+
+tok-io = { version = "1", package = "tokio", default-features = false, features = ["rt", "signal", "sync"], optional = true }
