--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -45,8 +45,8 @@ ntex-service = "0.2.1"
 ntex-macros = "0.1.3"
 ntex-util = "0.1.3"
 ntex-bytes = "0.1.8"
-ntex-tls = "0.1"
-ntex-io = { version = "0.1.0-b.0", features = ["tokio"] }
+ntex-tls = "0.1.0-b.0"
+ntex-io = "0.1.0-b.0"
 ntex-rt = { version = "0.4.0-b.0", default-features = false, features = ["tokio"] }
 
 base64 = "0.13"
