--- a/ntex-io/Cargo.toml
+++ b/ntex-io/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex-io"
-version = "0.1.0-b.8"
+version = "0.1.0-b.9"
 authors = ["ntex contributors <team@ntex.rs>"]
 description = "Utilities for encoding and decoding frames"
 keywords = ["network", "framework", "async", "futures"]
@@ -16,13 +16,16 @@ name = "ntex_io"
 path = "src/lib.rs"
 
 [features]
-default = ["tokio"]
+default = ["tokio-traits"]
 
 # tokio traits support
 tokio-traits = ["tok-io/net", "tok-io/rt"]
 
 # tokio runtime support
 tokio = ["tok-io/net", "tok-io/rt"]
+
+# async-std runtime support
+async-std = ["async_std/unstable"]
 
 [dependencies]
 ntex-codec = "0.6.0"
@@ -36,6 +39,7 @@ log = "0.4"
 pin-project-lite = "0.2"
 
 tok-io = { version = "1", package = "tokio", default-features = false, optional = true }
+async_std = { version = "1", package = "async-std", optional = true }
 
 [dev-dependencies]
 ntex = "0.5.0-b.2"
