--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex"
-version = "0.5.0-b.5"
+version = "0.5.0-b.6"
 authors = ["ntex contributors <team@ntex.rs>"]
 description = "Framework for composable network services"
 readme = "README.md"
@@ -21,7 +21,7 @@ name = "ntex"
 path = "src/lib.rs"
 
 [features]
-default = []
+default = ["tokio"]
 
 # openssl
 openssl = ["tls-openssl", "ntex-tls/openssl"]
@@ -38,6 +38,12 @@ cookie = ["coo-kie", "coo-kie/percent-encode"]
 # url support
 url = ["url-pkg"]
 
+# tokio runtime
+tokio = ["ntex-rt/tokio"]
+
+# async-std runtime
+async-std = ["ntex-rt/async-std"]
+
 [dependencies]
 ntex-codec = "0.6.0"
 ntex-router = "0.5.1"
@@ -46,8 +52,8 @@ ntex-macros = "0.1.3"
 ntex-util = "0.1.5"
 ntex-bytes = "0.1.8"
 ntex-tls = "0.1.0-b.6"
-ntex-io = "0.1.0-b.8"
-ntex-rt = { version = "0.4.0-b.2", default-features = false, features = ["tokio"] }
+ntex-rt = "0.4.0-b.3"
+ntex-io = { version = "0.1.0-b.9", features = ["tokio-traits"] }
 
 base64 = "0.13"
 bitflags = "1.3"
