--- a/ntex-async-std/Cargo.toml
+++ b/ntex-async-std/Cargo.toml
@@ -1,32 +1,26 @@
 [package]
-name = "ntex-io"
+name = "ntex-async-std"
 version = "0.1.0"
 authors = ["ntex contributors <team@ntex.rs>"]
-description = "Utilities for encoding and decoding frames"
+description = "async-std intergration for ntex framework"
 keywords = ["network", "framework", "async", "futures"]
 homepage = "https://ntex.rs"
 repository = "https://github.com/ntex-rs/ntex.git"
-documentation = "https://docs.rs/ntex-io/"
+documentation = "https://docs.rs/ntex-rt-tokio/"
 categories = ["network-programming", "asynchronous"]
 license = "MIT"
 edition = "2018"
 
 [lib]
-name = "ntex_io"
+name = "ntex_async_std"
 path = "src/lib.rs"
 
 [dependencies]
-ntex-codec = "0.6.0"
 ntex-bytes = "0.1.8"
+ntex-io = "0.1.0"
 ntex-util = "0.1.6"
-ntex-service = "0.3.0"
-
-bitflags = "1.3"
-fxhash = "0.2.1"
+async-oneshot = "0.5.0"
+derive_more = "0.99"
 log = "0.4"
 pin-project-lite = "0.2"
-
-[dev-dependencies]
-ntex = "0.5.0"
-rand = "0.8"
-env_logger = "0.9"
+async-std = { version = "1", features = ["unstable"] }
