--- a/ntex-util/Cargo.toml
+++ b/ntex-util/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex-util"
-version = "0.1.5"
+version = "0.1.6"
 authors = ["ntex contributors <team@ntex.rs>"]
 description = "Utilities for ntex framework"
 keywords = ["network", "framework", "async", "futures"]
@@ -16,6 +16,7 @@ name = "ntex_util"
 path = "src/lib.rs"
 
 [dependencies]
+ntex-rt = "0.4.1"
 bitflags = "1.3"
 fxhash = "0.2.1"
 log = "0.4"
@@ -26,7 +27,7 @@ futures-sink = { version = "0.3", default-features = false, features = ["alloc"]
 pin-project-lite = "0.2.6"
 
 [dev-dependencies]
-ntex = "0.5.0-b.0"
-ntex-rt = "0.4.0-b.0"
+ntex = "0.5.4"
+ntex-rt = "0.4.1"
 ntex-macros = "0.1.3"
 futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
