--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex"
-version = "0.5.4"
+version = "0.5.5"
 authors = ["ntex contributors <team@ntex.rs>"]
 description = "Framework for composable network services"
 readme = "README.md"
@@ -21,7 +21,7 @@ name = "ntex"
 path = "src/lib.rs"
 
 [features]
-default = ["tokio"]
+default = []
 
 # openssl
 openssl = ["tls-openssl", "ntex-tls/openssl"]
@@ -42,18 +42,20 @@ url = ["url-pkg"]
 tokio = ["ntex-rt/tokio"]
 
 # async-std runtime
-async-std = ["ntex-rt/async-std"]
+async-std = ["ntex-rt/async-std", "ntex-async-std"]
 
 [dependencies]
 ntex-codec = "0.6.0"
 ntex-router = "0.5.1"
 ntex-service = "0.3.0"
 ntex-macros = "0.1.3"
-ntex-util = "0.1.5"
+ntex-util = "0.1.6"
 ntex-bytes = "0.1.8"
 ntex-tls = "0.1.0"
 ntex-rt = "0.4.0"
-ntex-io = { version = "0.1.0", features = ["tokio-traits"] }
+ntex-io = "0.1.0"
+ntex-tokio = "0.1.0"
+ntex-async-std = { version = "0.1.0", optional = true }
 
 base64 = "0.13"
 bitflags = "1.3"
